--- a/pom.xml
+++ b/pom.xml
@@ -85,9 +85,9 @@
                 <version>${maven-project-info-reports-plugin.version}</version>
             </plugin>
             <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-surefire-report-plugin</artifactId>-->
-                <!--<version>${maven-surefire-report-plugin.version}</version>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-surefire-report-plugin</artifactId>-->
+            <!--<version>${maven-surefire-report-plugin.version}</version>-->
             <!--</plugin>-->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -182,6 +182,8 @@
                             <configuration>
                                 <failOnWarning>true</failOnWarning>
                                 <usedDependencies>
+                                    <usedDependency>ch.qos.logback:logback-classic</usedDependency>
+                                    <usedDependency>com.google.code.maven-play-plugin.com.jamonapi:jamon</usedDependency>
                                     <usedDependency>com.h2database:h2</usedDependency>
                                     <usedDependency>com.mchange:c3p0</usedDependency>
                                     <usedDependency>info.cukes:cucumber-html</usedDependency>
@@ -194,6 +196,7 @@
                                     <usedDependency>org.seleniumhq.selenium:selenium-firefox-driver</usedDependency>
                                     <usedDependency>org.slf4j:jcl-over-slf4j</usedDependency>
                                     <usedDependency>org.slf4j:log4j-over-slf4j</usedDependency>
+                                    <usedDependency>org.springframework:spring-aspects</usedDependency>
                                     <usedDependency>org.springframework.data:spring-data-rest-webmvc</usedDependency>
                                     <usedDependency>org.springframework.security:spring-security-config</usedDependency>
                                     <usedDependency>org.webjars:bootswatch</usedDependency>
@@ -355,72 +358,6 @@
                     </configuration>
                 </plugin>
                 <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>aspectj-maven-plugin</artifactId>
-                    <version>${aspectj-maven-plugin.version}</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.aspectj</groupId>
-                            <artifactId>aspectjrt</artifactId>
-                            <version>${aspectj.version}</version>
-                        </dependency>
-                        <dependency>
-                            <groupId>org.aspectj</groupId>
-                            <artifactId>aspectjtools</artifactId>
-                            <version>${aspectj.version}</version>
-                        </dependency>
-                        <dependency>
-                            <groupId>org.aspectj</groupId>
-                            <artifactId>aspectjweaver</artifactId>
-                            <version>${aspectj.version}</version>
-                        </dependency>
-                    </dependencies>
-                    <executions>
-                        <execution>
-                            <id>compile</id>
-                            <goals>
-                                <goal>compile</goal>
-                            </goals>
-                            <configuration>
-                                <aspectLibraries>
-                                    <aspectLibrary>
-                                        <groupId>org.springframework</groupId>
-                                        <artifactId>spring-aspects</artifactId>
-                                    </aspectLibrary>
-                                </aspectLibraries>
-                                <complianceLevel>1.7</complianceLevel>
-                                <forceAjcCompile>true</forceAjcCompile>
-                                <source>1.7</source>
-                                <target>1.7</target>
-                                <weaveDirectories>
-                                    <weaveDirectory>${project.basedir}/target/classes</weaveDirectory>
-                                </weaveDirectories>
-                            </configuration>
-                        </execution>
-                        <execution>
-                            <id>test-compile</id>
-                            <goals>
-                                <goal>test-compile</goal>
-                            </goals>
-                            <configuration>
-                                <aspectLibraries>
-                                    <aspectLibrary>
-                                        <groupId>org.springframework</groupId>
-                                        <artifactId>spring-aspects</artifactId>
-                                    </aspectLibrary>
-                                </aspectLibraries>
-                                <complianceLevel>1.7</complianceLevel>
-                                <forceAjcCompile>true</forceAjcCompile>
-                                <source>1.7</source>
-                                <target>1.7</target>
-                                <weaveDirectories>
-                                    <weaveDirectory>${project.basedir}/target/test-classes</weaveDirectory>
-                                </weaveDirectories>
-                            </configuration>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
                     <groupId>org.jetbrains.kotlin</groupId>
                     <artifactId>kotlin-maven-plugin</artifactId>
                     <version>${kotlin-maven-plugin.version}</version>
@@ -478,10 +415,6 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>aspectj-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
             </plugin>
@@ -506,11 +439,6 @@
                 <scope>runtime</scope>
             </dependency>
             <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-core</artifactId>
-                <version>${logback.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>commons-beanutils</groupId>
                 <artifactId>commons-beanutils</artifactId>
                 <version>${commons-beanutils.version}</version>
@@ -519,6 +447,12 @@
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.maven-play-plugin.com.jamonapi</groupId>
+                <artifactId>jamon</artifactId>
+                <version>${jamon.version}</version>
+                <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
@@ -601,11 +535,6 @@
                 <scope>runtime</scope>
             </dependency>
             <dependency>
-                <groupId>org.aspectj</groupId>
-                <artifactId>aspectjrt</artifactId>
-                <version>${aspectj.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
                 <version>${hibernate.version}</version>
@@ -669,17 +598,17 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>jcl-over-slf4j</artifactId>
-                <version>${slf4j-api.version}</version>
+                <version>${slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>log4j-over-slf4j</artifactId>
-                <version>${slf4j-api.version}</version>
+                <version>${slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>${slf4j-api.version}</version>
+                <version>${slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -695,12 +624,7 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-aspects</artifactId>
                 <version>${spring.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.aspectj</groupId>
-                        <artifactId>aspectjweaver</artifactId>
-                    </exclusion>
-                </exclusions>
+                <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -862,8 +786,8 @@
             <artifactId>logback-classic</artifactId>
         </dependency>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
+            <groupId>com.google.code.maven-play-plugin.com.jamonapi</groupId>
+            <artifactId>jamon</artifactId>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
@@ -904,10 +828,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -952,10 +872,6 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -1061,7 +977,6 @@
         <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
 
         <!-- Plugin versions -->
-        <aspectj-maven-plugin.version>1.4</aspectj-maven-plugin.version>
         <kotlin-maven-plugin.version>0.5.748</kotlin-maven-plugin.version>
         <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
@@ -1080,7 +995,6 @@
         <!-- Dependency versions -->
         <ant.version>1.9.1</ant.version>
         <antlr-runtime.version>3.5</antlr-runtime.version>
-        <aspectj.version>1.7.3</aspectj.version>
         <bootswatch.version>2.3.1</bootswatch.version>
         <c3p0.version>0.9.2.1</c3p0.version>
         <cglib.version>3.0</cglib.version>
@@ -1095,6 +1009,7 @@
         <hibernate.version>4.2.2.Final</hibernate.version>
         <hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
         <html5shiv.version>3.6.2</html5shiv.version>
+        <jamon.version>2.7</jamon.version>
         <jboss-logging.version>3.1.3.GA</jboss-logging.version>
         <jquery.version>2.0.2</jquery.version>
         <jstl.version>1.2</jstl.version>
@@ -1104,7 +1019,7 @@
         <logback.version>1.0.13</logback.version>
         <selenium.version>2.33.0</selenium.version>
         <servlet-api.version>2.5</servlet-api.version>
-        <slf4j-api.version>1.7.5</slf4j-api.version>
+        <slf4j.version>1.7.5</slf4j.version>
         <spring.version>3.2.3.RELEASE</spring.version>
         <!-- TODO Find out if this is necessary, and why it's out of sync -->
         <spring-asm.version>3.1.4.RELEASE</spring-asm.version>
