--- a/pom.xml
+++ b/pom.xml
@@ -84,11 +84,11 @@
                 <artifactId>maven-project-info-reports-plugin</artifactId>
                 <version>${maven-project-info-reports-plugin.version}</version>
             </plugin>
-            <!--<plugin>-->
-            <!--<groupId>org.apache.maven.plugins</groupId>-->
-            <!--<artifactId>maven-surefire-report-plugin</artifactId>-->
-            <!--<version>${maven-surefire-report-plugin.version}</version>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>${maven-surefire-report-plugin.version}</version>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jdepend-maven-plugin</artifactId>
@@ -998,7 +998,7 @@
         <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
         <maven-linkcheck-plugin.version>1.1</maven-linkcheck-plugin.version>
         <maven-project-info-reports-plugin.version>2.7</maven-project-info-reports-plugin.version>
-        <maven-surefire-report-plugin.version>2.14.1</maven-surefire-report-plugin.version>
+        <maven-surefire-report-plugin.version>2.15</maven-surefire-report-plugin.version>
         <jdepend-maven-plugin.version>2.0-beta-2</jdepend-maven-plugin.version>
         <license-maven-plugin.version>1.5</license-maven-plugin.version>
         <taglist-maven-plugin.version>2.4</taglist-maven-plugin.version>
