--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,7 @@
                                     <usedDependency>ch.qos.logback:logback-classic</usedDependency>
                                     <usedDependency>com.google.code.maven-play-plugin.com.jamonapi:jamon</usedDependency>
                                     <usedDependency>com.h2database:h2</usedDependency>
+                                    <usedDependency>com.mattbertolini:liquibase-slf4j</usedDependency>
                                     <usedDependency>com.mchange:c3p0</usedDependency>
                                     <usedDependency>info.cukes:cucumber-html</usedDependency>
                                     <usedDependency>info.cukes:cucumber-spring</usedDependency>
@@ -492,6 +493,12 @@
                 <artifactId>h2</artifactId>
                 <version>${h2.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.mattbertolini</groupId>
+                <artifactId>liquibase-slf4j</artifactId>
+                <version>${liquibase-slf4j.version}</version>
+                <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>com.mchange</groupId>
@@ -822,6 +829,10 @@
             <artifactId>h2</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.mattbertolini</groupId>
+            <artifactId>liquibase-slf4j</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
         </dependency>
@@ -1045,6 +1056,7 @@
         <junit.version>4.11</junit.version>
         <kotlin.version>0.5.748</kotlin.version>
         <liquibase.version>3.0.1</liquibase.version>
+        <liquibase-slf4j.version>1.0.0</liquibase-slf4j.version>
         <logback.version>1.0.13</logback.version>
         <selenium.version>2.33.0</selenium.version>
         <servlet-api.version>3.1.0</servlet-api.version>
