--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,14 @@
         <system>github</system>
     </issueManagement>
 
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>manual</distribution>
+        </license>
+    </licenses>
+
     <reporting>
         <plugins>
             <plugin>
