--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,16 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>${maven-antrun-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>${maven-assembly-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-clean-plugin</artifactId>
                     <version>${maven-clean-plugin.version}</version>
                 </plugin>
@@ -320,6 +330,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>${maven-jar-plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>${maven-release-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -1056,6 +1071,8 @@
         <!-- Plugin versions -->
         <build-helper-maven-plugin.version>1.8</build-helper-maven-plugin.version>
         <kotlin-maven-plugin.version>0.5.748</kotlin-maven-plugin.version>
+        <maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
+        <maven-assembly-plugin.version>2.4</maven-assembly-plugin.version>
         <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
@@ -1063,6 +1080,7 @@
         <maven-failsafe-plugin.version>2.14.1</maven-failsafe-plugin.version>
         <maven-install-plugin.version>2.4</maven-install-plugin.version>
         <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
+        <maven-release-plugin.version>2.4.1</maven-release-plugin.version>
         <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
         <maven-site-plugin.version>3.2</maven-site-plugin.version>
         <maven-surefire-plugin.version>2.14.1</maven-surefire-plugin.version>
@@ -1088,14 +1106,14 @@
         <font-awesome.version>3.2.1</font-awesome.version>
         <guava.version>14.0.1</guava.version>
         <h2.version>1.3.172</h2.version>
-        <hibernate.version>4.2.2.Final</hibernate.version>
+        <hibernate.version>4.2.3.Final</hibernate.version>
         <hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
         <!-- TODO Bump this when spring supports hibernate-validator:5.0+ -->
         <hibernate-validator.version>4.3.1.Final</hibernate-validator.version>
         <html5shiv.version>3.6.2</html5shiv.version>
         <jamon.version>2.7</jamon.version>
         <jboss-logging.version>3.1.3.GA</jboss-logging.version>
-        <jquery.version>2.0.2</jquery.version>
+        <jquery.version>2.0.3</jquery.version>
         <jstl.version>1.2</jstl.version>
         <junit.version>4.11</junit.version>
         <kotlin.version>0.5.748</kotlin.version>
