--- a/pom.xml
+++ b/pom.xml
@@ -1117,7 +1117,7 @@
         <jstl.version>1.2</jstl.version>
         <junit.version>4.11</junit.version>
         <kotlin.version>0.5.748</kotlin.version>
-        <liquibase.version>3.0.1</liquibase.version>
+        <liquibase.version>3.0.2</liquibase.version>
         <liquibase-slf4j.version>1.0.0</liquibase-slf4j.version>
         <logback.version>1.0.13</logback.version>
         <selenium.version>2.33.0</selenium.version>
@@ -1131,7 +1131,7 @@
         <spring-data-rest.version>1.0.0.RELEASE</spring-data-rest.version>
         <spring-security.version>3.1.4.RELEASE</spring-security.version>
         <tiles.version>3.0.1</tiles.version>
-        <validation-api.version>1.0.0.GA</validation-api.version>
+        <validation-api.version>1.1.0.Final</validation-api.version>
         <wro4j.version>1.7.0</wro4j.version>
     </properties>
 
