--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,25 @@
                     </executions>
                 </plugin>
                 <plugin>
+                    <groupId>net.masterthought</groupId>
+                    <artifactId>maven-cucumber-reporting</artifactId>
+                    <version>${maven-cucumber-reporting.version}</version>
+                    <executions>
+                        <execution>
+                            <id>generate</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>generate</goal>
+                            </goals>
+                            <configuration>
+                                <outputDirectory>${project.build.directory}/cucumber-html-reports</outputDirectory>
+                                <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
+                                <enableFlashCharts>false</enableFlashCharts>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-antrun-plugin</artifactId>
                     <version>${maven-antrun-plugin.version}</version>
@@ -207,6 +226,7 @@
                                     <usedDependency>com.h2database:h2</usedDependency>
                                     <usedDependency>com.mattbertolini:liquibase-slf4j</usedDependency>
                                     <usedDependency>com.mchange:c3p0</usedDependency>
+                                    <usedDependency>info.cukes:gherkin</usedDependency>
                                     <usedDependency>info.cukes:cucumber-html</usedDependency>
                                     <usedDependency>info.cukes:cucumber-spring</usedDependency>
                                     <usedDependency>javax.servlet:jstl</usedDependency>
@@ -465,6 +485,10 @@
                 <artifactId>site-maven-plugin</artifactId>
             </plugin>
             <plugin>
+                <groupId>net.masterthought</groupId>
+                <artifactId>maven-cucumber-reporting</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
             </plugin>
@@ -571,6 +595,12 @@
                 <groupId>info.cukes</groupId>
                 <artifactId>cucumber-spring</artifactId>
                 <version>${cucumber.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>info.cukes</groupId>
+                <artifactId>gherkin</artifactId>
+                <version>${gherkin.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -889,6 +919,10 @@
         </dependency>
         <dependency>
             <groupId>info.cukes</groupId>
+            <artifactId>gherkin</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>info.cukes</groupId>
             <artifactId>cucumber-core</artifactId>
         </dependency>
         <dependency>
@@ -1075,6 +1109,7 @@
         <maven-assembly-plugin.version>2.4</maven-assembly-plugin.version>
         <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
+        <maven-cucumber-reporting.version>0.0.4</maven-cucumber-reporting.version>
         <maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
         <maven-enforcer-plugin.version>1.2</maven-enforcer-plugin.version>
         <maven-failsafe-plugin.version>2.14.1</maven-failsafe-plugin.version>
@@ -1105,6 +1140,7 @@
         <cucumber-html.version>0.2.3</cucumber-html.version>
         <font-awesome.version>3.2.1</font-awesome.version>
         <guava.version>14.0.1</guava.version>
+        <gherkin.version>2.11.8</gherkin.version>
         <h2.version>1.3.172</h2.version>
         <hibernate.version>4.2.3.Final</hibernate.version>
         <hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
