--- a/pom.xml
+++ b/pom.xml
@@ -16,20 +16,20 @@
 
     <repositories>
         <repository>
-            <id>jetbrains-all</id>
-            <url>http://repository.jetbrains.com/all</url>
+            <id>kotlin</id>
+            <url>http://repository.jetbrains.com/kotlin</url>
         </repository>
     </repositories>
 
     <pluginRepositories>
         <pluginRepository>
-            <id>jetbrains-all</id>
-            <url>http://repository.jetbrains.com/all</url>
+            <id>kotlin</id>
+            <url>http://repository.jetbrains.com/kotlin</url>
         </pluginRepository>
     </pluginRepositories>
 
     <prerequisites>
-        <maven>3.0.5</maven>
+        <maven>3.0.4</maven>
     </prerequisites>
 
     <scm>
@@ -226,7 +226,6 @@
                                     <usedDependency>com.google.code.maven-play-plugin.com.jamonapi:jamon</usedDependency>
                                     <usedDependency>com.h2database:h2</usedDependency>
                                     <usedDependency>com.mattbertolini:liquibase-slf4j</usedDependency>
-                                    <usedDependency>com.mchange:c3p0</usedDependency>
                                     <usedDependency>info.cukes:gherkin</usedDependency>
                                     <usedDependency>info.cukes:cucumber-html</usedDependency>
                                     <usedDependency>info.cukes:cucumber-spring</usedDependency>
@@ -234,7 +233,6 @@
                                     <usedDependency>org.apache.tiles:tiles-jsp</usedDependency>
                                     <usedDependency>org.hibernate:hibernate-ehcache</usedDependency>
                                     <usedDependency>org.hibernate:hibernate-entitymanager</usedDependency>
-                                    <usedDependency>org.liquibase:liquibase-core</usedDependency>
                                     <usedDependency>org.seleniumhq.selenium:selenium-firefox-driver</usedDependency>
                                     <usedDependency>org.slf4j:jcl-over-slf4j</usedDependency>
                                     <usedDependency>org.slf4j:log4j-over-slf4j</usedDependency>
@@ -245,7 +243,6 @@
                                     <usedDependency>org.webjars:font-awesome</usedDependency>
                                     <usedDependency>org.webjars:html5shiv</usedDependency>
                                     <usedDependency>org.webjars:jquery</usedDependency>
-                                    <usedDependency>ro.isdc.wro4j:wro4j-extensions</usedDependency>
                                 </usedDependencies>
                             </configuration>
                         </execution>
@@ -393,6 +390,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
                     <version>${maven-war-plugin.version}</version>
+                    <configuration>
+                        <failOnMissingWebXml>false</failOnMissingWebXml>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.tomcat.maven</groupId>
@@ -566,7 +566,6 @@
                 <groupId>com.mchange</groupId>
                 <artifactId>c3p0</artifactId>
                 <version>${c3p0.version}</version>
-                <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>info.cukes</groupId>
@@ -688,7 +687,6 @@
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-core</artifactId>
                 <version>${liquibase.version}</version>
-                <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>org.seleniumhq.selenium</groupId>
@@ -873,7 +871,6 @@
                 <groupId>ro.isdc.wro4j</groupId>
                 <artifactId>wro4j-extensions</artifactId>
                 <version>${wro4j.version}</version>
-                <scope>runtime</scope>
                 <exclusions>
                     <!-- TODO Update exclusions for resources we don't use (eg less) -->
                     <exclusion>
@@ -1081,7 +1078,6 @@
         <dependency>
             <groupId>ro.isdc.wro4j</groupId>
             <artifactId>wro4j-extensions</artifactId>
-            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
@@ -1129,7 +1125,7 @@
         <velocity.version>1.7</velocity.version>
 
         <!-- Dependency versions -->
-        <ant.version>1.9.1</ant.version>
+        <ant.version>1.9.2</ant.version>
         <antlr-runtime.version>3.5</antlr-runtime.version>
         <bootswatch.version>2.3.1</bootswatch.version>
         <c3p0.version>0.9.2.1</c3p0.version>
