Gave full names to spring components and injected @Value configuration

--- a/src/test/resources/fixture.properties
+++ b/src/test/resources/fixture.properties
@@ -41,5 +41,8 @@ fixture.service.smtp.port=25
 fixture.service.smtp.username=smtpuser
 fixture.service.smtp.password=smtppass
 
+fixture.service.smtp.sender.name=fixture.io
+fixture.service.smtp.sender.address=us@fixture.io
+
 fixture.theme.defaultThemeName=united
 fixture.theme.cookieName=theme
