--- a/pom.xml
+++ b/pom.xml
@@ -701,13 +701,13 @@
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
-                <version>${httpcomponents.version}</version>
+                <version>${httpclient.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpcore</artifactId>
-                <version>${httpcomponents.version}</version>
+                <version>${httpcore.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -1272,7 +1272,8 @@
         <!-- TODO Bump this when spring supports hibernate-validator:5.0+ -->
         <hibernate-validator.version>4.3.1.Final</hibernate-validator.version>
         <html5shiv.version>3.6.2</html5shiv.version>
-        <httpcomponents.version>4.2.5</httpcomponents.version>
+        <httpclient.version>4.2.5</httpclient.version>
+        <httpcore.version>4.2.4</httpcore.version>
         <jamon.version>2.7</jamon.version>
         <jboss-logging.version>3.1.3.GA</jboss-logging.version>
         <jquery.version>2.0.3</jquery.version>
